system-ui (1.2.21~1) unstable; urgency=low

  * [UNRELEASED]
  * Fixes: NB#293261 - private mode applet's help button appears delayed

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 29 Nov 2011 14:25:31 +0200

system-ui (1.2.20-1) unstable; urgency=low

  * Fixes: NB#292581 - Audible alert should not be played when exiting Power Save mode

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 29 Nov 2011 14:24:43 +0200

system-ui (1.2.19-1) unstable; urgency=low

  * Fixes: NB#289336 - time is not in sync on status bar with lock screen

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 21 Nov 2011 17:17:00 +0200

system-ui (1.2.18-1) unstable; urgency=low

  * Fixes: NB#291715 - Shutdown screen uses 1585kB of extra memory for no reason

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 18 Nov 2011 15:15:40 +0200

system-ui (1.2.17-1) unstable; urgency=low

  * Fixes: NB#289583 - Lock screen flashes quickly when a banner or notification is shown on home

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 07 Nov 2011 18:39:52 +0200

system-ui (1.2.16-1) unstable; urgency=low

  * Fixes: NB#288573 - Change some icons used for battery banners

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 01 Nov 2011 12:28:45 +0300

system-ui (1.2.15-1) unstable; urgency=low

  * Fixes: NB#284386 - [TASK] DLNA indicator on status area

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 26 Oct 2011 14:24:57 +0300

system-ui (1.2.14-1) unstable; urgency=low

  * Fixes: NB#287151 - §qtn_noti_and_more§ is not retranslated when the language is changed on first boot

 -- Artem Egorkine <ext-artem.egorkine@nokia.com>  Wed, 26 Oct 2011 10:28:20 +0300

system-ui (1.2.13-1) unstable; urgency=low

  * Fixes: NB#274279 - 'Current state: Charging only' (§qtn_usb_charging§) alignment and font are incorrect in the USB mode selection dialog

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 25 Oct 2011 15:23:07 +0300

system-ui (1.2.12-1) unstable; urgency=low
