@@ -2,6 +2,7 @@ system-ui (1.2.21~1) unstable; urgency=low
 
   * [UNRELEASED]
   * Fixes: NB#293261 - private mode applet's help button appears delayed
+  * Fixes: NB#290848 - sysuid needs to share X drawables in a secure manner
 
  -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 29 Nov 2011 14:25:31 +0200
 
